force-app/main/default/objects/HDT_RecordFormFieldDependency__mdt/HDT_RecordFormFieldDependency__mdt.object-meta.xml
<CustomObject>
    <label>Schema dipendenza edit form</label>
    <pluralLabel>Schemi dipendenza edit form</pluralLabel>
</CustomObject>