force-app/main/default/objects/HDT_RecordFormFieldDependency__mdt/fields/ControlledField__c.field-meta.xml
<CustomField>
    <fullName>ControlledField__c</fullName>
    <label>Controlled field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>