force-app/main/default/objects/HDT_RecordFormFieldDependency__mdt/fields/DependecyJSON__c.field-meta.xml
<CustomField>
    <fullName>DependecyJSON__c</fullName>
    <label>Dependency schema</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>