force-app/main/default/objects/HDT_RecordFormFieldDependency__mdt/fields/ProcessType__c.field-meta.xml
<CustomField>
    <fullName>ProcessType__c</fullName>
    <label>Process type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>